// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildAlertFields it creates the expected alert fields 1`] = `
Object {
  "@timestamp": "2020-01-01T00:00:00.000Z",
  "event.kind": "signal",
  "host.asset.criticality": undefined,
  "host.risk.calculated_level": undefined,
  "host.risk.calculated_score_norm": undefined,
  "kibana.alert.ancestors": Array [
    Object {
      "depth": 0,
      "id": "d5e8eb51-a6a0-456d-8a15-4b79bfec3d71",
      "index": "myFakeSignalIndex",
      "rule": undefined,
      "type": "event",
    },
  ],
  "kibana.alert.building_block_type": "default",
  "kibana.alert.depth": 1,
  "kibana.alert.host.criticality_level": undefined,
  "kibana.alert.intended_timestamp": "2020-01-01T00:00:00.000Z",
  "kibana.alert.original_time": "2020-04-20T21:27:45.000Z",
  "kibana.alert.reason": "test reason",
  "kibana.alert.risk_score": 50,
  "kibana.alert.rule.actions": Array [],
  "kibana.alert.rule.author": Array [
    "Elastic",
  ],
  "kibana.alert.rule.building_block_type": "default",
  "kibana.alert.rule.consumer": "siem",
  "kibana.alert.rule.created_at": "2020-03-27T22:55:59.577Z",
  "kibana.alert.rule.created_by": "sample user",
  "kibana.alert.rule.description": "Detecting root and admin users",
  "kibana.alert.rule.enabled": true,
  "kibana.alert.rule.exceptions_list": Array [
    Object {
      "id": "some_uuid",
      "list_id": "list_id_single",
      "namespace_type": "single",
      "type": "detection",
    },
    Object {
      "id": "endpoint_list",
      "list_id": "endpoint_list",
      "namespace_type": "agnostic",
      "type": "endpoint",
    },
  ],
  "kibana.alert.rule.execution.type": "scheduled",
  "kibana.alert.rule.false_positives": Array [],
  "kibana.alert.rule.from": "now-6m",
  "kibana.alert.rule.immutable": false,
  "kibana.alert.rule.indices": Array [],
  "kibana.alert.rule.interval": "5m",
  "kibana.alert.rule.license": "Elastic License",
  "kibana.alert.rule.max_signals": 10000,
  "kibana.alert.rule.meta.someMeta": "someField",
  "kibana.alert.rule.name": "rule-name",
  "kibana.alert.rule.namespace": undefined,
  "kibana.alert.rule.note": "# Investigative notes",
  "kibana.alert.rule.parameters": Object {
    "alert_suppression": undefined,
    "author": Array [
      "Elastic",
    ],
    "building_block_type": "default",
    "data_view_id": undefined,
    "description": "Detecting root and admin users",
    "exceptions_list": Array [
      Object {
        "id": "some_uuid",
        "list_id": "list_id_single",
        "namespace_type": "single",
        "type": "detection",
      },
      Object {
        "id": "endpoint_list",
        "list_id": "endpoint_list",
        "namespace_type": "agnostic",
        "type": "endpoint",
      },
    ],
    "false_positives": Array [],
    "filters": Array [
      Object {
        "query": Object {
          "match_phrase": Object {
            "host.name": "some-host",
          },
        },
      },
    ],
    "from": "now-6m",
    "immutable": false,
    "index": Array [
      "auditbeat-*",
      "filebeat-*",
      "packetbeat-*",
      "winlogbeat-*",
    ],
    "investigation_fields": undefined,
    "language": "kuery",
    "license": "Elastic License",
    "max_signals": 10000,
    "meta": Object {
      "someMeta": "someField",
    },
    "namespace": undefined,
    "note": "# Investigative notes",
    "query": "user.name: root or user.name: admin",
    "references": Array [
      "http://example.com",
      "https://example.com",
    ],
    "related_integrations": Array [],
    "required_fields": Array [],
    "response_actions": undefined,
    "risk_score": 50,
    "risk_score_mapping": Array [],
    "rule_id": "rule-1",
    "rule_name_override": undefined,
    "rule_source": Object {
      "type": "internal",
    },
    "saved_id": undefined,
    "setup": "",
    "severity": "high",
    "severity_mapping": Array [],
    "threat": Array [
      Object {
        "framework": "MITRE ATT&CK",
        "tactic": Object {
          "id": "TA0000",
          "name": "test tactic",
          "reference": "https://attack.mitre.org/tactics/TA0000/",
        },
        "technique": Array [
          Object {
            "id": "T0000",
            "name": "test technique",
            "reference": "https://attack.mitre.org/techniques/T0000/",
            "subtechnique": Array [
              Object {
                "id": "T0000.000",
                "name": "test subtechnique",
                "reference": "https://attack.mitre.org/techniques/T0000/000/",
              },
            ],
          },
        ],
      },
    ],
    "timeline_id": "some-timeline-id",
    "timeline_title": "some-timeline-title",
    "timestamp_override": undefined,
    "timestamp_override_fallback_disabled": undefined,
    "to": "now",
    "type": "query",
    "version": 1,
  },
  "kibana.alert.rule.references": Array [
    "http://example.com",
    "https://example.com",
  ],
  "kibana.alert.rule.risk_score": 50,
  "kibana.alert.rule.risk_score_mapping": Array [],
  "kibana.alert.rule.rule_id": "rule-1",
  "kibana.alert.rule.rule_name_override": undefined,
  "kibana.alert.rule.severity": "high",
  "kibana.alert.rule.severity_mapping": Array [],
  "kibana.alert.rule.tags": Array [
    "some fake tag 1",
    "some fake tag 2",
  ],
  "kibana.alert.rule.threat": Array [
    Object {
      "framework": "MITRE ATT&CK",
      "tactic": Object {
        "id": "TA0000",
        "name": "test tactic",
        "reference": "https://attack.mitre.org/tactics/TA0000/",
      },
      "technique": Array [
        Object {
          "id": "T0000",
          "name": "test technique",
          "reference": "https://attack.mitre.org/techniques/T0000/",
          "subtechnique": Array [
            Object {
              "id": "T0000.000",
              "name": "test subtechnique",
              "reference": "https://attack.mitre.org/techniques/T0000/000/",
            },
          ],
        },
      ],
    },
  ],
  "kibana.alert.rule.throttle": "no_actions",
  "kibana.alert.rule.timeline_id": "some-timeline-id",
  "kibana.alert.rule.timeline_title": "some-timeline-title",
  "kibana.alert.rule.timestamp_override": undefined,
  "kibana.alert.rule.to": "now",
  "kibana.alert.rule.type": "query",
  "kibana.alert.rule.updated_at": "2020-03-27T22:55:59.577Z",
  "kibana.alert.rule.updated_by": "sample user",
  "kibana.alert.rule.uuid": "04128c15-0d1b-4716-a4c5-46997ac7f3bd",
  "kibana.alert.rule.version": 1,
  "kibana.alert.severity": "high",
  "kibana.alert.status": "active",
  "kibana.alert.url": "test/url/app/security/alerts/redirect/test-uuid?index=.alerts-security.alerts-default&timestamp=2020-01-01T00:00:00.000Z",
  "kibana.alert.user.criticality_level": undefined,
  "kibana.alert.uuid": "test-uuid",
  "kibana.alert.workflow_assignee_ids": Array [],
  "kibana.alert.workflow_status": "open",
  "kibana.alert.workflow_tags": Array [],
  "kibana.space_ids": Array [
    "default",
  ],
  "user.asset.criticality": undefined,
  "user.risk.calculated_level": undefined,
  "user.risk.calculated_score_norm": undefined,
}
`;

exports[`buildAlertFields it creates the expected alert fields for manual run 1`] = `
Object {
  "@timestamp": "2020-01-01T00:00:00.000Z",
  "event.kind": "signal",
  "host.asset.criticality": undefined,
  "host.risk.calculated_level": undefined,
  "host.risk.calculated_score_norm": undefined,
  "kibana.alert.ancestors": Array [
    Object {
      "depth": 0,
      "id": "d5e8eb51-a6a0-456d-8a15-4b79bfec3d71",
      "index": "myFakeSignalIndex",
      "rule": undefined,
      "type": "event",
    },
  ],
  "kibana.alert.building_block_type": "default",
  "kibana.alert.depth": 1,
  "kibana.alert.host.criticality_level": undefined,
  "kibana.alert.intended_timestamp": "2019-01-01T00:00:00.000Z",
  "kibana.alert.original_time": "2020-04-20T21:27:45.000Z",
  "kibana.alert.reason": "test reason",
  "kibana.alert.risk_score": 50,
  "kibana.alert.rule.actions": Array [],
  "kibana.alert.rule.author": Array [
    "Elastic",
  ],
  "kibana.alert.rule.building_block_type": "default",
  "kibana.alert.rule.consumer": "siem",
  "kibana.alert.rule.created_at": "2020-03-27T22:55:59.577Z",
  "kibana.alert.rule.created_by": "sample user",
  "kibana.alert.rule.description": "Detecting root and admin users",
  "kibana.alert.rule.enabled": true,
  "kibana.alert.rule.exceptions_list": Array [
    Object {
      "id": "some_uuid",
      "list_id": "list_id_single",
      "namespace_type": "single",
      "type": "detection",
    },
    Object {
      "id": "endpoint_list",
      "list_id": "endpoint_list",
      "namespace_type": "agnostic",
      "type": "endpoint",
    },
  ],
  "kibana.alert.rule.execution.type": "manual",
  "kibana.alert.rule.false_positives": Array [],
  "kibana.alert.rule.from": "now-6m",
  "kibana.alert.rule.immutable": false,
  "kibana.alert.rule.indices": Array [],
  "kibana.alert.rule.interval": "5m",
  "kibana.alert.rule.license": "Elastic License",
  "kibana.alert.rule.max_signals": 10000,
  "kibana.alert.rule.meta.someMeta": "someField",
  "kibana.alert.rule.name": "rule-name",
  "kibana.alert.rule.namespace": undefined,
  "kibana.alert.rule.note": "# Investigative notes",
  "kibana.alert.rule.parameters": Object {
    "alert_suppression": undefined,
    "author": Array [
      "Elastic",
    ],
    "building_block_type": "default",
    "data_view_id": undefined,
    "description": "Detecting root and admin users",
    "exceptions_list": Array [
      Object {
        "id": "some_uuid",
        "list_id": "list_id_single",
        "namespace_type": "single",
        "type": "detection",
      },
      Object {
        "id": "endpoint_list",
        "list_id": "endpoint_list",
        "namespace_type": "agnostic",
        "type": "endpoint",
      },
    ],
    "false_positives": Array [],
    "filters": Array [
      Object {
        "query": Object {
          "match_phrase": Object {
            "host.name": "some-host",
          },
        },
      },
    ],
    "from": "now-6m",
    "immutable": false,
    "index": Array [
      "auditbeat-*",
      "filebeat-*",
      "packetbeat-*",
      "winlogbeat-*",
    ],
    "investigation_fields": undefined,
    "language": "kuery",
    "license": "Elastic License",
    "max_signals": 10000,
    "meta": Object {
      "someMeta": "someField",
    },
    "namespace": undefined,
    "note": "# Investigative notes",
    "query": "user.name: root or user.name: admin",
    "references": Array [
      "http://example.com",
      "https://example.com",
    ],
    "related_integrations": Array [],
    "required_fields": Array [],
    "response_actions": undefined,
    "risk_score": 50,
    "risk_score_mapping": Array [],
    "rule_id": "rule-1",
    "rule_name_override": undefined,
    "rule_source": Object {
      "type": "internal",
    },
    "saved_id": undefined,
    "setup": "",
    "severity": "high",
    "severity_mapping": Array [],
    "threat": Array [
      Object {
        "framework": "MITRE ATT&CK",
        "tactic": Object {
          "id": "TA0000",
          "name": "test tactic",
          "reference": "https://attack.mitre.org/tactics/TA0000/",
        },
        "technique": Array [
          Object {
            "id": "T0000",
            "name": "test technique",
            "reference": "https://attack.mitre.org/techniques/T0000/",
            "subtechnique": Array [
              Object {
                "id": "T0000.000",
                "name": "test subtechnique",
                "reference": "https://attack.mitre.org/techniques/T0000/000/",
              },
            ],
          },
        ],
      },
    ],
    "timeline_id": "some-timeline-id",
    "timeline_title": "some-timeline-title",
    "timestamp_override": undefined,
    "timestamp_override_fallback_disabled": undefined,
    "to": "now",
    "type": "query",
    "version": 1,
  },
  "kibana.alert.rule.references": Array [
    "http://example.com",
    "https://example.com",
  ],
  "kibana.alert.rule.risk_score": 50,
  "kibana.alert.rule.risk_score_mapping": Array [],
  "kibana.alert.rule.rule_id": "rule-1",
  "kibana.alert.rule.rule_name_override": undefined,
  "kibana.alert.rule.severity": "high",
  "kibana.alert.rule.severity_mapping": Array [],
  "kibana.alert.rule.tags": Array [
    "some fake tag 1",
    "some fake tag 2",
  ],
  "kibana.alert.rule.threat": Array [
    Object {
      "framework": "MITRE ATT&CK",
      "tactic": Object {
        "id": "TA0000",
        "name": "test tactic",
        "reference": "https://attack.mitre.org/tactics/TA0000/",
      },
      "technique": Array [
        Object {
          "id": "T0000",
          "name": "test technique",
          "reference": "https://attack.mitre.org/techniques/T0000/",
          "subtechnique": Array [
            Object {
              "id": "T0000.000",
              "name": "test subtechnique",
              "reference": "https://attack.mitre.org/techniques/T0000/000/",
            },
          ],
        },
      ],
    },
  ],
  "kibana.alert.rule.throttle": "no_actions",
  "kibana.alert.rule.timeline_id": "some-timeline-id",
  "kibana.alert.rule.timeline_title": "some-timeline-title",
  "kibana.alert.rule.timestamp_override": undefined,
  "kibana.alert.rule.to": "now",
  "kibana.alert.rule.type": "query",
  "kibana.alert.rule.updated_at": "2020-03-27T22:55:59.577Z",
  "kibana.alert.rule.updated_by": "sample user",
  "kibana.alert.rule.uuid": "04128c15-0d1b-4716-a4c5-46997ac7f3bd",
  "kibana.alert.rule.version": 1,
  "kibana.alert.severity": "high",
  "kibana.alert.status": "active",
  "kibana.alert.url": "test/url/app/security/alerts/redirect/test-uuid?index=.alerts-security.alerts-default&timestamp=2020-01-01T00:00:00.000Z",
  "kibana.alert.user.criticality_level": undefined,
  "kibana.alert.uuid": "test-uuid",
  "kibana.alert.workflow_assignee_ids": Array [],
  "kibana.alert.workflow_status": "open",
  "kibana.alert.workflow_tags": Array [],
  "kibana.space_ids": Array [
    "default",
  ],
  "user.asset.criticality": undefined,
  "user.risk.calculated_level": undefined,
  "user.risk.calculated_score_norm": undefined,
}
`;
